# Argus

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARGUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTIVES.md  Dockerfile  KNOWN_REDS.md  LICENSE  LICENSE-PRO  Makefile  PHASES.md  PRODUCTION_READINESS.md  README.md  REPORT_VERIFICATION_2026-04-18.md  SECURITY.md  SWARM_SPRINT_STATE.md  argus_zd.py  docker-compose.yml  pyproject.toml
argus-frontend/: vite.config.ts
benchmark/: CINEMATIC_OUTPUT.txt  EVIDENCE_REPORT.md  LEADERBOARD.md  LIVE_OUTPUT.txt  README.md  RUN_OUTPUT.txt  baseline-findings.json  baseline-score.json  docker-compose.yml  record_demo.sh  record_web_demo.sh  run_baseline.py  run_cinematic.py  run_live.py
docs/: ADDING_A_LABRAT.md  GETTING_STARTED.md
tests/: conftest.py  test_a2a_labrat_engagement.py  test_adapter.py  test_adversarial_mcp.py  test_agent_01_prompt_injection.py  test_agent_02_tool_poisoning.py  test_agent_04_identity_spoof.py  test_agent_05_context_window.py  test_agent_06_cross_agent_exfil.py  test_agent_08_race_condition.py  test_agent_09_supply_chain.py  test_agent_10_model_extraction.py  test_agent_11_environment_pivot.py  test_agents.py  test_alec_export.py  test_cerberus_rules.py  test_chain_synthesis_v2.py  test_contracts.py  test_core_detection_harness.py  test_corpus.py  test_correlation_v2.py  test_demo_crewai.py  test_diagnostics_causes.py  test_diagnostics_classifier.py  test_drift.py  test_dynamic_corpus.py  test_engagement_error_diagnostics.py  test_evidence.py  test_framework_labrats.py  test_impact.py  (+25 more)
(+226 files in other folders)
