[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-redteam"
version = "0.4.0"
description = "Autonomous AI Red Team Platform - Core Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "google-generativeai",
    "anthropic",
    "openai",
    "requests",
    "python-dotenv",
    "networkx",
    "mcp",
    "docker",
    "pyyaml"
]
authors = [
  { name="ARGUS Defense", email="security@sixsenseenterprise.com" }
]

[project.scripts]
argus            = "argus.cli:main"
argus-pre-commit = "argus.integrations.pre_commit:run_pre_commit"

[project.optional-dependencies]
webhook = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
